fix(Results): :bug: fixes viewport sizing cutting off results cards

--- a/src/scss/components/_results-panel.scss
+++ b/src/scss/components/_results-panel.scss
@@ -63,4 +63,9 @@
   // set viewport height to display cards
   height: calc(100vh - 10rem - 122px);
   width: $panel-width;
+
+  @include md {
+    height: calc(100vh - 15rem - 122px);
+    width: $md-results-panel-width;
+  }
 }
